Add performance code